## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libLCDcommands.a

libLCDcommands_a_SOURCES = command_list.c command_list.h client_commands.c client_commands.h menu_commands.c menu_commands.h screen_commands.c screen_commands.h server_commands.c server_commands.h widget_commands.c widget_commands.h

AM_CPPFLAGS = -I$(top_srcdir) -I$(srcdir)/..

## EOF
