## Process this file with automake to produce Makefile.in

EXTRA_DIST =	bayrad.docbook \
		CFontz633.docbook \
		CFontz.docbook \
		CFontzPacket.docbook \
		curses.docbook \
		CwLnx.docbook \
		glcdlib.docbook \
		glk.docbook \
		hd44780.docbook \
		icp_a106.docbook \
		imon.docbook \
		IOWarrior.docbook \
		irman.docbook \
		joy.docbook \
		lb216.docbook \
		lcdm001.docbook \
		lcterm.docbook \
		lirc.docbook \
		lircin.docbook \
		ms6931.docbook \
		mtc_s16209x.docbook \
		mtxorb.docbook \
		NoritakeVFD.docbook \
		ppttrouble.docbook \
		pylcd.docbook \
		sed1330.docbook \
		sed1520.docbook \
		serialVFD.docbook \
		sli.docbook \
		stv5730.docbook \
		svga.docbook \
		t6963.docbook \
		text.docbook \
		tyan.docbook \
		ula200.docbook \
		xosd.docbook

## EOF
