## Process this file with automake to produce Makefile.in

EXTRA_DIST =	bayrad.docbook \
		CFontz633.docbook \
		CFontz.docbook \
		CFontzPacket.docbook \
		curses.docbook \
		CwLnx.docbook \
		ea65.docbook \
		eyeboxone.docbook \
		g15.docbook \
		glcdlib.docbook \
		glk.docbook \
		hd44780.docbook \
		icp_a106.docbook \
		imon.docbook \
		imonlcd.docbook \
		IOWarrior.docbook \
		irman.docbook \
		irtrans.docbook \
		joy.docbook \
		lb216.docbook \
		lcdm001.docbook \
		lcterm.docbook \
		lircin.docbook \
		lis.docbook \
		MD8800.docbook \
		ms6931.docbook \
		mtc_s16209x.docbook \
		mtxorb.docbook \
		mx5000.docbook \
		NoritakeVFD.docbook \
		picolcd.docbook \
		ppttrouble.docbook \
		pylcd.docbook \
		sed1330.docbook \
		sed1520.docbook \
		serialPOS.docbook \
		serialVFD.docbook \
		shuttleVFD.docbook \
		sli.docbook \
		stv5730.docbook \
		svga.docbook \
		t6963.docbook \
		text.docbook \
		tyan.docbook \
		ula200.docbook \
		xosd.docbook \
		i2500vfd.docbook

## EOF
